--- a/assets/css/main.style.css
+++ b/assets/css/main.style.css
@@ -13,6 +13,15 @@ body, html{
     overflow-x: hidden;
 }
 
+#nav__div.active{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
 
 :root{
     --primaryColor: #804DEA;
@@ -77,7 +86,7 @@ button{
 
 .hero{
     background-color: #fff;
-    margin-top: 100px;
+    margin-top: 63.49px;
 }
 
 .card{
